
= rufus-doric CHANGELOG.txt


== rufus-doric - 0.1.1    not yet released

- Rufus::Doric.db(dbname) returns the couchdb 'connection'
- Rufus::Doric::Value : one document containing a single [big] value


== rufus-doric - 0.1.0    released 2010/03/17

- initial release
