@@ -68,14 +68,14 @@ something at the intersection of Rails3, CouchDB and rufus-jig
 
     if Gem::Version.new(Gem::RubyGemsVersion) >= Gem::Version.new('1.2.0') then
       s.add_runtime_dependency(%q<activerecord>, ["~> 3.0.0.beta"])
-      s.add_runtime_dependency(%q<rufus-jig>, [">= 0.1.16"])
+      s.add_runtime_dependency(%q<rufus-jig>, [">= 0.1.17"])
       s.add_runtime_dependency(%q<mime-types>, [">= 1.16"])
       s.add_development_dependency(%q<rake>, [">= 0"])
       s.add_development_dependency(%q<yard>, [">= 0"])
       s.add_development_dependency(%q<jeweler>, [">= 0"])
     else
       s.add_dependency(%q<activerecord>, ["~> 3.0.0.beta"])
-      s.add_dependency(%q<rufus-jig>, [">= 0.1.16"])
+      s.add_dependency(%q<rufus-jig>, [">= 0.1.17"])
       s.add_dependency(%q<mime-types>, [">= 1.16"])
       s.add_dependency(%q<rake>, [">= 0"])
       s.add_dependency(%q<yard>, [">= 0"])
@@ -83,7 +83,7 @@ something at the intersection of Rails3, CouchDB and rufus-jig
     end
   else
     s.add_dependency(%q<activerecord>, ["~> 3.0.0.beta"])
-    s.add_dependency(%q<rufus-jig>, [">= 0.1.16"])
+    s.add_dependency(%q<rufus-jig>, [">= 0.1.17"])
     s.add_dependency(%q<mime-types>, [">= 1.16"])
     s.add_dependency(%q<rake>, [">= 0"])
     s.add_dependency(%q<yard>, [">= 0"])
